Active Data Ordering

--- a/Sky Atlas/Sky Atlas.html
+++ b/Sky Atlas/Sky Atlas.html
@@ -2803,18 +2803,6 @@
             the Support Facilitators.<br> - The Update Process must follow the protocol for ‘Direct Edit’.
         </td>
         </tr>
-        <tr>
-          <td>
-           <dfn>A.1.8
-              - Emergency Response System - Emergency Response - Emergency Response Group Current Membership</dfn>
-          </td>
-          <td>Emergency Response System - Emergency Response - Emergency Response Group Current Membership</td>
-          <td>Active Data Controller</td>
-          <td>The members of the Emergency Response Group are:<br> - Endgame Edge<br> - JanSky<br> - Ecosystem<br> - Phoenix Labs<br>
-            - Jetstream<br> - Atlas Axis<br> - Steakhouse<br> - Blocktower<br> - BA Labs<br> - Maker Growth<br> - Dewiz<br> - Sidestream<br>
-            - Cloaky<br> - Blue<br> - JuliaChang<br> - PullUp Labs<br> - Chronicle Labs<br> - TechOps
-        </td>
-        </tr>
           <tr>
           <td>
            <dfn>A.1.8
@@ -13020,6 +13008,17 @@
             |
           </td>
         </tr>
+        <tr>
+          <td>
+           <dfn>A.1.8
+              - Emergency Response System - Emergency Response - Emergency Response Group Current Membership</dfn>
+          </td>
+          <td>Emergency Response System - Emergency Response - Emergency Response Group Current Membership</td>
+          <td>Active Data</td>
+          <td>The members of the Emergency Response Group are:<br> • Endgame Edge<br> • JanSky<br> • Ecosystem<br> • Phoenix Labs<br>
+            • Jetstream<br> • Atlas Axis<br> • Steakhouse<br> • Blocktower<br> • BA Labs<br> • Maker Growth<br> • Dewiz<br> •Sidestream<br>
+            • Cloaky<br> • Blue<br> • JuliaChang<br> • PullUp Labs<br> • Chronicle Labs<br> • TechOps
+        </td>
         <tr>
           <td>
             <dfn>A.2.5
