Adding bullet point

--- a/Sky Atlas/Sky Atlas.html
+++ b/Sky Atlas/Sky Atlas.html
@@ -2938,10 +2938,10 @@
           </td>
           <td>Emergency Response System - Emergency Response - Considerations Before Expediting Protocol Changes</td>
           <td>Core</td>
-          <td>The Facilitators are required to consider several important factors before expediting changes to the protocol:<br> - Potential 
-            for SKY holders to miss a poll or Executive Vote due to departure from the standard governance cycles.<br> - Expedited votes may 
-            not allow for sufficient discussion, leading to a sub-optimal solution.<br> - Increased governance burden on community and increased 
-            workload for domain teams.<br> Frequent expedited votes may signal a lack of appreciation for a consistent and predictable governance process.
+          <td>The Facilitators are required to consider several important factors before expediting changes to the protocol:<br> • Potential 
+            for SKY holders to miss a poll or Executive Vote due to departure from the standard governance cycles.<br> • Expedited votes may 
+            not allow for sufficient discussion, leading to a sub-optimal solution.<br> • Increased governance burden on community and increased 
+            workload for domain teams.<br> • Frequent expedited votes may signal a lack of appreciation for a consistent and predictable governance process.
         </td>
         </tr>
         <tr>
