--- a/Sky Atlas/Sky Atlas.html
+++ b/Sky Atlas/Sky Atlas.html
@@ -3038,7 +3038,7 @@
           <td>To achieve continuous improvement of emergency response processes, records should be retained post-incident to enable review of 
             actions taken during the incident response. Such records may include but are not limited to:<br> 1. An incident response template filled 
             in with information from the coordination meeting;<br> 2. Incident artifacts, including files, screenshots, documents, and links;<br> 
-            Chat transcripts from the approved communication channels specified in A.1.8 - Emergency Response System - Emergency Response - 
+            3. Chat transcripts from the approved communication channels specified in A.1.8 - Emergency Response System - Emergency Response - 
             Emergency Response Communication Channels.<br> It is at the discretion of the Support Facilitators as to whether incident records can be 
             shared with entities outside of the Emergency Response Group.
         </td>
