Fixing bullet points

--- a/Sky Atlas/Sky Atlas.html
+++ b/Sky Atlas/Sky Atlas.html
@@ -2799,8 +2799,8 @@
           <td>Emergency Response System - Emergency Response - Emergency Response Group Membership</td>
           <td>Active Data Controller</td>
           <td>The membership of the Emergency Response Group is defined as Active Data in A.1.8 - Emergency Response System - Emergency 
-            Response - Emergency Response Group Current Membership. The Active Data is updated as follows:<br> - The Responsible Party is 
-            the Support Facilitators.<br> - The Update Process must follow the protocol for ‘Direct Edit’.
+            Response - Emergency Response Group Current Membership. The Active Data is updated as follows:<br> • The Responsible Party is 
+            the Support Facilitators.<br> • The Update Process must follow the protocol for ‘Direct Edit’.
         </td>
         </tr>
           <tr>
