Removing vigilant from Current Aligned Delegates (#51)

--- a/Sky Atlas/Sky Atlas.html
+++ b/Sky Atlas/Sky Atlas.html
@@ -12182,13 +12182,7 @@
             ------------------------------------------------------------------------------------------------------------------------------------------------------------------
             |
             ------------------------------------------------------------------------------------------------------------------------------------------------------------------
-            | --------------------------------------------------------------------------------- || vigilant | <a
-              href="https://etherscan.io/address/0x2474937cB55500601BCCE9f4cb0A0A72Dc226F61">https://etherscan.io/address/0x2474937cB55500601BCCE9f4cb0A0A72Dc226F61</a>
-            <a href="https://etherscan.io/verifySig/16682">https://etherscan.io/verifySig/16682</a> | <a
-              href="https://etherscan.io/address/0xDE08aEf2b221274231b3547491ec8f0Fc80917e1">https://etherscan.io/address/0xDE08aEf2b221274231b3547491ec8f0Fc80917e1</a>
-            <a href="https://etherscan.io/verifySig/255532">https://etherscan.io/verifySig/255532</a> | <a
-              href="https://forum.makerdao.com/t/cd-recognition-submission-vigilant/20457">https://forum.makerdao.com/t/cd-recognition-submission-vigilant/20457</a>
-            || QGov | <a
+            | --------------------------------------------------------------------------------- || QGov | <a
               href="https://etherscan.io/address/0xB0524D8707F76c681901b782372EbeD2d4bA28a6">https://etherscan.io/address/0xB0524D8707F76c681901b782372EbeD2d4bA28a6</a>
             <a href="https://etherscan.io/verifySig/16763">https://etherscan.io/verifySig/16763</a> | <a
               href="https://etherscan.io/address/0x0a907fe3adb890db7db27a7f21e188a4127b2e7c">https://etherscan.io/address/0x0a907fe3adb890db7db27a7f21e188a4127b2e7c</a>
