--- a/Sky Atlas/Sky Atlas.html
+++ b/Sky Atlas/Sky Atlas.html
@@ -12239,14 +12239,14 @@
             || Bonapublica | <a
               href="https://etherscan.io/address/0x167c1a762B08D7e78dbF8f24e5C3f1Ab415021D3">https://etherscan.io/address/0x167c1a762B08D7e78dbF8f24e5C3f1Ab415021D3</a>
             <a href="https://etherscan.io/verifySig/21271">https://etherscan.io/verifySig/21271</a> | <a
-              href="https://etherscan.io/address/0x452a7626f587d6811509dC071768168ea763EA3C">https://etherscan.io/address/0x452a7626f587d6811509dC071768168ea763EA3C</a>
-            <a href="https://etherscan.io/verifySig/39656">https://etherscan.io/verifySig/39656</a> | <a
+              href="https://etherscan.io/address/0xf1423F5A97940349E105B0D1C860D3dCE87E56dB">https://etherscan.io/address/0xf1423F5A97940349E105B0D1C860D3dCE87E56dB</a>
+            <a href="https://etherscan.io/verifySig/259048">https://etherscan.io/verifySig/259048</a> | <a
               href="https://forum.makerdao.com/t/bonapublica-aligned-delegate-communication/20451/90">https://forum.makerdao.com/t/bonapublica-aligned-delegate-communication/20451/90</a>
             || PBG | <a
               href="https://etherscan.io/address/0x8D4df847dB7FfE0B46AF084fE031F7691C6478c2">https://etherscan.io/address/0x8D4df847dB7FfE0B46AF084fE031F7691C6478c2</a>
             <a href="https://etherscan.io/verifySig/16773">https://etherscan.io/verifySig/16773</a> | <a
-              href="https://etherscan.io/address/0xEb1764CC9577c52f430794E9044F64F1C49Dd395">https://etherscan.io/address/0xEb1764CC9577c52f430794E9044F64F1C49Dd395</a>
-            <a href="https://etherscan.io/verifySig/40131">https://etherscan.io/verifySig/40131</a> | <a
+              href="https://etherscan.io/address/0xCFE1c10B90dC49A063742b6eb29D1bDc7e722aa2">https://etherscan.io/address/0xCFE1c10B90dC49A063742b6eb29D1bDc7e722aa2</a>
+            <a href="https://etherscan.io/verifySig/259576">https://etherscan.io/verifySig/259576</a> | <a
               href="https://forum.makerdao.com/t/pbg-aligned-delegate-communication-platform/20471/69">https://forum.makerdao.com/t/pbg-aligned-delegate-communication-platform/20471/69</a>
             || Pf | <a
               href="https://etherscan.io/address/0x94A388BEC0769c3394A48dB4DaBE5F29994100B3">https://etherscan.io/address/0x94A388BEC0769c3394A48dB4DaBE5F29994100B3</a>
@@ -12257,8 +12257,8 @@
             || UPMaker | <a
               href="https://etherscan.io/address/0xbb819df169670dc71a16f58f55956fe642cc6bcd">https://etherscan.io/address/0xbb819df169670dc71a16f58f55956fe642cc6bcd</a>
             <a href="https://etherscan.io/verifySig/16997">https://etherscan.io/verifySig/16997</a> | <a
-              href="https://etherscan.io/address/0xc9C17EE58810172622b43B09C9C9FF31e50f5179">https://etherscan.io/address/0xc9C17EE58810172622b43B09C9C9FF31e50f5179</a>
-            <a href="https://etherscan.io/verifySig/38947">https://etherscan.io/verifySig/38947</a> | <a
+              href="https://etherscan.io/address/0xe0e9882012ecbcfec5e1fa04102b07185dfdeab7">https://etherscan.io/address/0xe0e9882012ecbcfec5e1fa04102b07185dfdeab7</a>
+            <a href="https://etherscan.io/verifySig/259652">https://etherscan.io/verifySig/259652</a> | <a
               href="https://forum.makerdao.com/t/upmaker-cd-recognition-submission/20577">https://forum.makerdao.com/t/upmaker-cd-recognition-submission/20577</a>
             || WBC | <a
               href="https://etherscan.io/address/0xeBcE83e491947aDB1396Ee7E55d3c81414fB0D47">https://etherscan.io/address/0xeBcE83e491947aDB1396Ee7E55d3c81414fB0D47</a>
@@ -12269,8 +12269,8 @@
             || BLUE | <a
               href="https://etherscan.io/address/0xb6c09680d822f162449cdfb8248a7d3fc26ec9bf">https://etherscan.io/address/0xb6c09680d822f162449cdfb8248a7d3fc26ec9bf</a>
             <a href="https://etherscan.io/verifySig/19057">https://etherscan.io/verifySig/19057</a> | <a
-              href="https://etherscan.io/address/0xb18680092734394295d0591bb42f2bd3c184517e">https://etherscan.io/address/0xb18680092734394295d0591bb42f2bd3c184517e</a>
-            <a href="https://etherscan.io/verifySig/25260">https://etherscan.io/verifySig/25260</a> | <a
+              href="https://etherscan.io/address/0xe1FF7ECf038900dd14A1E7E3a8CCF23f71f6A1c2">https://etherscan.io/address/0xe1FF7ECf038900dd14A1E7E3a8CCF23f71f6A1c2</a>
+            <a href="https://etherscan.io/verifySig/258998">https://etherscan.io/verifySig/258998</a> | <a
               href="https://forum.makerdao.com/t/blue-ad-recognition-submission/20915">https://forum.makerdao.com/t/blue-ad-recognition-submission/20915</a>
             || JAG | <a
               href="https://etherscan.io/address/0x58d1ec57e4294e4fe650d1cb12b96ae34349556f">https://etherscan.io/address/0x58d1ec57e4294e4fe650d1cb12b96ae34349556f</a>
@@ -12289,8 +12289,8 @@
             || Cloaky | <a
               href="https://etherscan.io/address/0x869b6d5d8FA7f4FFdaCA4D23FFE0735c5eD1F818">https://etherscan.io/address/0x869b6d5d8FA7f4FFdaCA4D23FFE0735c5eD1F818</a>
             <a href="https://etherscan.io/verifySig/19712">https://etherscan.io/verifySig/19712</a> | <a
-              href="https://etherscan.io/address/0x24419b100Bd4f5C581c0AA89A274fcfB5B3915a8">https://etherscan.io/address/0x24419b100Bd4f5C581c0AA89A274fcfB5B3915a8</a>
-            <a href="https://etherscan.io/verifySig/250883">https://etherscan.io/verifySig/250883</a> | <a
+              href="https://etherscan.io/address/0xB02e05c257291aCD65A527227aCA6b7662E047f4">https://etherscan.io/address/0xB02e05c257291aCD65A527227aCA6b7662E047f4</a>
+            <a href="https://etherscan.io/verifySig/258809">https://etherscan.io/verifySig/258809</a> | <a
               href="https://forum.makerdao.com/t/cloaky-ad-recognition-submission/21082">https://forum.makerdao.com/t/cloaky-ad-recognition-submission/21082</a>
             || Penguin Soldier | <a
               href="https://etherscan.io/address/0x41caF770eb0a9EeC0c9cC46F388ea5A76986E217">https://etherscan.io/address/0x41caF770eb0a9EeC0c9cC46F388ea5A76986E217</a>
@@ -12319,8 +12319,8 @@
             || Byteron | <a
               href="https://etherscan.io/address/0xc2982e72D060cab2387Dba96b846acb8c96EfF66">https://etherscan.io/address/0xc2982e72D060cab2387Dba96b846acb8c96EfF66</a>
             <a href="https://etherscan.io/verifySig/27074">https://etherscan.io/verifySig/27074</a> | <a
-              href="https://etherscan.io/address/0xa346C2EEa05bB32c986FF755b2F19d2f0ba8d14C">https://etherscan.io/address/0xa346C2EEa05bB32c986FF755b2F19d2f0ba8d14C</a>
-            <a href="https://etherscan.io/verifySig/27073">https://etherscan.io/verifySig/27073</a> | <a
+              href="https://etherscan.io/address/0x6276e3d47cce873400d4ba3664bfb4b9c8ece79c">https://etherscan.io/address/0x6276e3d47cce873400d4ba3664bfb4b9c8ece79c</a>
+            <a href="https://etherscan.io/verifySig/259643">https://etherscan.io/verifySig/259643</a> | <a
               href="https://forum.makerdao.com/t/byteron-ad-recognition-submission/22537">https://forum.makerdao.com/t/byteron-ad-recognition-submission/22537</a>
             || Shanah | <a
               href="https://etherscan.io/address/0xc9a0D0b89A74F7D9F229F9195c7fD7f7E09C127E">https://etherscan.io/address/0xc9a0D0b89A74F7D9F229F9195c7fD7f7E09C127E</a>
@@ -12341,8 +12341,8 @@
             || JuliaChang | <a
               href="https://etherscan.io/address/0x252abAEe2F4f4b8D39E5F12b163eDFb7fac7AED7">https://etherscan.io/address/0x252abAEe2F4f4b8D39E5F12b163eDFb7fac7AED7</a>
             <a href="https://etherscan.io/verifySig/34622">https://etherscan.io/verifySig/34622</a> | <a
-              href="https://etherscan.io/address/0x7938b304F1c28e85b6A021251C8CeefF20370f38">https://etherscan.io/address/0x7938b304F1c28e85b6A021251C8CeefF20370f38</a>
-            <a href="https://etherscan.io/verifySig/34620">https://etherscan.io/verifySig/34620</a> | <a
+              href="https://etherscan.io/address/0x5D4a96aFadb5505a8fF21ddeCa2Baf3A63301396">https://etherscan.io/address/0x5D4a96aFadb5505a8fF21ddeCa2Baf3A63301396</a>
+            <a href="hhttps://etherscan.io/verifySig/259101">https://etherscan.io/verifySig/259101</a> | <a
               href="https://forum.makerdao.com/t/juliachang-ad-recognition-submission/23507">https://forum.makerdao.com/t/juliachang-ad-recognition-submission/23507</a>
             || StoneWill | <a
               href="https://etherscan.io/address/0x72779c76bcC8DF6B7082f736f2C2BFba2db588f3">https://etherscan.io/address/0x72779c76bcC8DF6B7082f736f2C2BFba2db588f3</a>
