remove derecognized delegates (#56)
* remove derecognized delegates

* Update derecognized list

--- a/Sky Atlas/Sky Atlas.html
+++ b/Sky Atlas/Sky Atlas.html
@@ -12814,6 +12814,14 @@
               href="https://forum.makerdao.com/t/ad-derecognition-due-to-operational-security-breach-02-02-2024/23619">https://forum.makerdao.com/t/ad-derecognition-due-to-operational-security-breach-02-02-2024/23619</a>
             | | 2024-04-06 | AD | TRUE NAME | - | <a
               href="https://forum.makerdao.com/t/ad-derecognition-due-to-operational-security-breach-april-5-2024/24043">https://forum.makerdao.com/t/ad-derecognition-due-to-operational-security-breach-april-5-2024/24043</a>
+            | | 2024-12-17 | AD | UPMaker | - | <a
+              href="https://forum.sky.money/t/derecognition-notice-for-multiple-aligned-delegates/25718">https://forum.sky.money/t/derecognition-notice-for-multiple-aligned-delegates/25718</a>
+            | | 2024-12-17 | AD | QGov | - | <a
+              href="https://forum.sky.money/t/derecognition-notice-for-multiple-aligned-delegates/25718">https://forum.sky.money/t/derecognition-notice-for-multiple-aligned-delegates/25718</a>
+            | | 2024-12-17 | AD | Skynet | - | <a
+              href="https://forum.sky.money/t/derecognition-notice-for-multiple-aligned-delegates/25718">https://forum.sky.money/t/derecognition-notice-for-multiple-aligned-delegates/25718</a>
+            | | 2024-12-17 | AD | Pf | - | <a
+              href="https://forum.sky.money/t/derecognition-notice-for-multiple-aligned-delegates/25718">https://forum.sky.money/t/derecognition-notice-for-multiple-aligned-delegates/25718</a>
             |
           </td>
         </tr>
@@ -12848,13 +12856,7 @@
             ------------------------------------------------------------------------------------------------------------------------------------------------------------------
             |
             ------------------------------------------------------------------------------------------------------------------------------------------------------------------
-            | --------------------------------------------------------------------------------- || QGov | <a
-              href="https://etherscan.io/address/0xB0524D8707F76c681901b782372EbeD2d4bA28a6">https://etherscan.io/address/0xB0524D8707F76c681901b782372EbeD2d4bA28a6</a>
-            <a href="https://etherscan.io/verifySig/16763">https://etherscan.io/verifySig/16763</a> | <a
-              href="https://etherscan.io/address/0x0a907fe3adb890db7db27a7f21e188a4127b2e7c">https://etherscan.io/address/0x0a907fe3adb890db7db27a7f21e188a4127b2e7c</a>
-            <a href="https://etherscan.io/verifySig/16765">https://etherscan.io/verifySig/16765</a> | <a
-              href="https://forum.makerdao.com/t/qgov-cd-recognition-submission/20494">https://forum.makerdao.com/t/qgov-cd-recognition-submission/20494</a>
-            || Bonapublica | <a
+            | --------------------------------------------------------------------------------- || Bonapublica | <a
               href="https://etherscan.io/address/0x167c1a762B08D7e78dbF8f24e5C3f1Ab415021D3">https://etherscan.io/address/0x167c1a762B08D7e78dbF8f24e5C3f1Ab415021D3</a>
             <a href="https://etherscan.io/verifySig/21271">https://etherscan.io/verifySig/21271</a> | <a
               href="https://etherscan.io/address/0xf1423F5A97940349E105B0D1C860D3dCE87E56dB">https://etherscan.io/address/0xf1423F5A97940349E105B0D1C860D3dCE87E56dB</a>
@@ -12866,18 +12868,6 @@
               href="https://etherscan.io/address/0xCFE1c10B90dC49A063742b6eb29D1bDc7e722aa2">https://etherscan.io/address/0xCFE1c10B90dC49A063742b6eb29D1bDc7e722aa2</a>
             <a href="https://etherscan.io/verifySig/259576">https://etherscan.io/verifySig/259576</a> | <a
               href="https://forum.makerdao.com/t/pbg-aligned-delegate-communication-platform/20471/69">https://forum.makerdao.com/t/pbg-aligned-delegate-communication-platform/20471/69</a>
-            || Pf | <a
-              href="https://etherscan.io/address/0x94A388BEC0769c3394A48dB4DaBE5F29994100B3">https://etherscan.io/address/0x94A388BEC0769c3394A48dB4DaBE5F29994100B3</a>
-            <a href="https://etherscan.io/verifySig/16824">https://etherscan.io/verifySig/16824</a> | No active
-            contract <a href="https://etherscan.io/verifySig/16825">https://etherscan.io/verifySig/16825</a> |
-            <a
-              href="https://forum.makerdao.com/t/pf-recognition-submission/20520">https://forum.makerdao.com/t/pf-recognition-submission/20520</a>
-            || UPMaker | <a
-              href="https://etherscan.io/address/0xbb819df169670dc71a16f58f55956fe642cc6bcd">https://etherscan.io/address/0xbb819df169670dc71a16f58f55956fe642cc6bcd</a>
-            <a href="https://etherscan.io/verifySig/16997">https://etherscan.io/verifySig/16997</a> | <a
-              href="https://etherscan.io/address/0xe0e9882012ecbcfec5e1fa04102b07185dfdeab7">https://etherscan.io/address/0xe0e9882012ecbcfec5e1fa04102b07185dfdeab7</a>
-            <a href="https://etherscan.io/verifySig/259652">https://etherscan.io/verifySig/259652</a> | <a
-              href="https://forum.makerdao.com/t/upmaker-cd-recognition-submission/20577">https://forum.makerdao.com/t/upmaker-cd-recognition-submission/20577</a>
             || WBC | <a
               href="https://etherscan.io/address/0xeBcE83e491947aDB1396Ee7E55d3c81414fB0D47">https://etherscan.io/address/0xeBcE83e491947aDB1396Ee7E55d3c81414fB0D47</a>
             <a href="https://etherscan.io/verifySig/17927">https://etherscan.io/verifySig/17927</a> | <a
@@ -12898,12 +12888,6 @@
               href="https://etherscan.io/tx/0xe195b455598d8ba6079af3654511474ce3b9c9cfeb5d7f942d3b80b3d5f83f20">https://etherscan.io/tx/0xe195b455598d8ba6079af3654511474ce3b9c9cfeb5d7f942d3b80b3d5f83f20</a>
             | <a
               href="https://forum.makerdao.com/t/jag-ad-delegate-submission/20972">https://forum.makerdao.com/t/jag-ad-delegate-submission/20972</a>
-            || Skynet | <a
-              href="https://etherscan.io/address/0xd4d1A446cD5976a11bd32D3e815A9F85FED2F9F3">https://etherscan.io/address/0xd4d1A446cD5976a11bd32D3e815A9F85FED2F9F3</a>
-            <a href="https://etherscan.io/verifySig/19702">https://etherscan.io/verifySig/19702</a> | <a
-              href="https://etherscan.io/address/0x5c86fa06eebf5d7bdc1a75c293a3289ac0535f7f">https://etherscan.io/address/0x5c86fa06eebf5d7bdc1a75c293a3289ac0535f7f</a>
-            <a href="https://etherscan.io/verifySig/251409">https://etherscan.io/verifySig/251409</a> | <a
-              href="https://forum.makerdao.com/t/skynet-ad-submission/21077">https://forum.makerdao.com/t/skynet-ad-submission/21077</a>
             || Cloaky | <a
               href="https://etherscan.io/address/0x869b6d5d8FA7f4FFdaCA4D23FFE0735c5eD1F818">https://etherscan.io/address/0x869b6d5d8FA7f4FFdaCA4D23FFE0735c5eD1F818</a>
             <a href="https://etherscan.io/verifySig/19712">https://etherscan.io/verifySig/19712</a> | <a
