Active elements update from December 30, 2024 governance polls (#57)

--- a/Sky Atlas/Sky Atlas.html
+++ b/Sky Atlas/Sky Atlas.html
@@ -8834,7 +8834,7 @@
           </td>
           <td>Measures For Endgame Transition - SparkLend Risk Parameters - WBTC Risk Parameters</td>
           <td>Core</td>
-          <td>The current WBTC risk parameters are:• LTV: 0%• Liquidation Threshold: 60%• E-mode Category: N/A•
+          <td>The current WBTC risk parameters are:• LTV: 0%• Liquidation Threshold: 55%• E-mode Category: N/A•
             Liquidation Bonus: 7%• Reserve Factor: 20%• Supply Cap: Set by cap automater• Borrow Cap: Set by cap
             automater• Optimal Utilization: 60%• Isolated Debt Ceiling: N/A• Base Rate: 0%• Slope 1: 2%• Slope
             2: 300%• Reserve State: Active• Collateral: Yes• Borrowing: No• Isolated Collateral: No• Isolated
@@ -8861,9 +8861,9 @@
           <td>Measures For Endgame Transition - SparkLend Risk Parameters - wstETH Risk Parameters</td>
           <td>Core</td>
           <td>The current wstETH risk parameters are:• LTV: 79%• Liquidation Threshold: 80%• E-mode Category: ETH•
-            Liquidation Bonus: 7%• Reserve Factor: 15%• Supply Cap: Set by cap automater• Borrow Cap: Set by cap
-            automater• Optimal Utilization: 45%• Isolated Debt Ceiling: N/A• Base Rate: 0.25%• Slope 1: 4.5%•
-            Slope 2: 80%• Reserve State: Active• Collateral: Yes• Borrowing: Yes• Isolated Collateral: No•
+            Liquidation Bonus: 7%• Reserve Factor: 30%• Supply Cap: Set by cap automater• Borrow Cap: Set by cap
+            automater• Optimal Utilization: 70%• Isolated Debt Ceiling: N/A• Base Rate: 0%• Slope 1: 2%•
+            Slope 2: 200%• Reserve State: Active• Collateral: Yes• Borrowing: Yes• Isolated Collateral: No•
             Isolated Borrowing: No• Siloed Borrowing: No• Flash Loan Enabled: Yes</td>
         </tr>
         <tr>
@@ -9047,7 +9047,7 @@
           <td>Measures For Endgame Transition - SparkLend Risk Parameters - Cap Automator wstETH Parameters</td>
           <td>Core</td>
           <td>The current wstETH cap automator parameters are:• Supply cap ◦ gap: 50,000 wstETH ◦ ttl: 12 hours ◦
-            max: 1.2 million wstETH• Borrow cap ◦ gap: 5,000 wstETH ◦ ttl: 12 hours ◦ max: 100,000 wstETH</td>
+            max: 1.2 million wstETH ◦ Borrow cap ◦ gap: 10,000 wstETH ◦ ttl: 12 hours ◦ max: 1,000,000 wstETH</td>
         </tr>
         <tr>
           <td>
@@ -9113,7 +9113,7 @@
           </td>
           <td>Measures For Endgame Transition - SparkLend Risk Parameters - Cap Automator cbBTC Parameters</td>
           <td>Core</td>
-          <td>The current cbBTC cap automator parameters are:• Supply cap ◦ gap: 500 cbBTC ◦ ttl: 12 hours ◦ max: 3,000 cbBTC
+          <td>The current cbBTC cap automator parameters are:• Supply cap ◦ gap: 500 cbBTC ◦ ttl: 12 hours ◦ max: 10,000 cbBTC
           • Borrow cap ◦ gap: 50 cbBTC ◦ ttl: 12 hours ◦ max: 500 cbBTC</td>
         </tr>
         <tr>
