Update Sky Atlas.html (#67)

--- a/Sky Atlas/Sky Atlas.html
+++ b/Sky Atlas/Sky Atlas.html
@@ -3197,7 +3197,7 @@
           <td>Sky Core Governance Security - Governance Security Delay Requirements - Pause Delay Current Value
           </td>
           <td>Core</td>
-          <td>The GSM Pause Delay is: 30 hours</td>
+          <td>The GSM Pause Delay is: 18 hours</td>
         </tr>
         <tr>
           <td>
@@ -9304,13 +9304,10 @@
           <td>Core</td>
           <td>The current LSE-MKR-A & Liquidation parameters are:• Cut: 0.99• Step: 60 seconds• Buf: 1.20•
            Cusp: 0.40• Tail: 6,000 seconds• Chip: 0.1%• Tip: 300 DAI• Calc: StairstepExponentialDecrease• 
-            Ilk.chop: 8%• Tolerance: 0.5• Dust: 30,000 DAI• Ilk.hole: 3M DAI• Stability Fee: 12%•
-            spotter[ilk].mat (Liquidation Ratio): 200%• DC-IAM line: Initially, the parameter is set to 20 million. 
-            After launch of the Seal Engine the DC-IAM line parameter must be dynamically set, through executive 
-            votes at regular intervals, to be equivalent to the amount of USDS in the Surplus Buffer minus 20 million, 
-            OR if the USDS contents of the Smart Burn Engine fall below 30 million it must be set to 0.• DC-IAM gap: 5M•
-            DC-IAM ttl: 16h• Add Seal Module to LineMom GSM Exception<br>Other Seal Module Params:• farms (Whitelisted set 
-            of farms to choose from): LsMkrUsdsFarm• fee - (Exit Fee): 5%<br>StakingRewards:• rewardsDistribution: Set to the Splitter•
+            Ilk.chop: 8%• Tolerance: 0.5• Dust: 30,000 DAI• Ilk.hole: 3M DAI• Stability Fee: 20%•
+            spotter[ilk].mat (Liquidation Ratio): 125%• DC-IAM line: 45M.• DC-IAM gap: 45M•
+            DC-IAM ttl: 30 minutes• Add Seal Module to LineMom GSM Exception<br>Other Seal Module Params:• farms (Whitelisted set 
+            of farms to choose from): LsMkrUsdsFarm• fee - (Exit Fee): 0%<br>StakingRewards:• rewardsDistribution: Set to the Splitter•
             rewardsDuration: 15,649 seconds</td>
         </tr>
         <tr>
