--- a/Sky Atlas/Sky Atlas.html
+++ b/Sky Atlas/Sky Atlas.html
@@ -6806,7 +6806,7 @@
           </td>
           <td>Core Stability Parameters - Parameters - Dai Savings Rate Current Value</td>
           <td>Core</td>
-          <td>The current value of the Dai Savings Rate is 5.50%.</td>
+          <td>The current value of the Dai Savings Rate is 3.50%.</td>
         </tr>
         <tr>
           <td>
@@ -7717,7 +7717,7 @@
           <td>The current Surplus Buffer Splitter parameters are:• vow.hump: 70m (Threshold of Surplus buffer for Splitter to activate)•
               Estimated Net protocol Income: 100,765,523• 50% of estimated net protocol income is sent to Splitter: 50,382,762 (for SBE and 
               Seal Module, remaining 50% is accumulated in Surplus Buffer). This value must be regularly updated through an executive vote to 
-              continue to target 50% of the estimated net protocol income.• vow.bump: 10,000 DAI• splitter.hop: 2,160 seconds• 100% of 
+              continue to target 50% of the estimated net protocol income.• vow.bump: 10,000 DAI• splitter.hop: 1,728 seconds• 100% of 
               Splitter allocation is set to accumulate SKY• 0% of Splitter allocation is set to reward Seal users• burn (the percentage of 
               the vow.bump to be moved to the underlying flapper): 100% (1 * WAD). Flapper must maintain its legacy values.</td>
           </td>
@@ -7824,7 +7824,7 @@
           </td>
           <td>Measures For Endgame Transition - Native Vault Engine - ETH-A</td>
           <td>Core</td>
-          <td>Current ETH-A parameters are:• Stability Fee: 7.75%• Liquidation Ratio: 145%• DC-IAM line:
+          <td>Current ETH-A parameters are:• Stability Fee: 6.00%• Liquidation Ratio: 145%• DC-IAM line:
             15,000,000,000 Dai• DC-IAM gap: 150,000,000 Dai• DC-IAM ttl: 21,600 seconds• cut: 99.00%• step: 90
             seconds• buf: 110.00%• cusp: 45.00%• tail: 7,200 seconds• chip: 0.10%• tip: 250• chop: 13%• hole:
             40,000,000 Dai• dust: 7,500 Dai</td>
@@ -7836,7 +7836,7 @@
           </td>
           <td>Measures For Endgame Transition - Native Vault Engine - ETH-B</td>
           <td>Core</td>
-          <td>Current ETH-B parameters are:• Stability Fee: 8.25%• Liquidation Ratio: 130%• DC-IAM line:
+          <td>Current ETH-B parameters are:• Stability Fee: 6.50%• Liquidation Ratio: 130%• DC-IAM line:
             250,000,000 Dai• DC-IAM gap: 20,000,000 Dai• DC-IAM ttl: 21,600 seconds• cut: 99.00%• step: 60
             seconds• buf: 110.00%• cusp: 45.00%• tail: 4,800 seconds• chip: 0.10%• tip: 250• chop: 13%• hole:
             15,000,000 Dai• dust: 25,000 Dai</td>
@@ -7848,7 +7848,7 @@
           </td>
           <td>Measures For Endgame Transition - Native Vault Engine - ETH-C</td>
           <td>Core</td>
-          <td>Current ETH-C parameters are:• Stability Fee: 7.50%• Liquidation Ratio: 170%• DC-IAM line:
+          <td>Current ETH-C parameters are:• Stability Fee: 5.75%• Liquidation Ratio: 170%• DC-IAM line:
             2,000,000,000 Dai• DC-IAM gap: 100,000,000 Dai• DC-IAM ttl: 28,800 seconds• cut: 99.00%• step: 90
             seconds• buf: 110.00%• cusp: 45.00%• tail: 7,200 seconds• chip: 0.10%• tip: 250• chop: 13%• hole:
             35,000,000 Dai• dust: 3,500 Dai</td>
@@ -7860,7 +7860,7 @@
           </td>
           <td>Measures For Endgame Transition - Native Vault Engine - WSTETH-A</td>
           <td>Core</td>
-          <td>Current WSTETH-A parameters are:• Stability Fee: 8.75%• Liquidation Ratio: 150%• DC-IAM line:
+          <td>Current WSTETH-A parameters are:• Stability Fee: 7.00%• Liquidation Ratio: 150%• DC-IAM line:
             750,000,000 Dai• DC-IAM gap: 30,000,000 Dai• DC-IAM ttl: 43,200 seconds• cut: 99.00%• step: 90
             seconds• buf: 110.00%• cusp: 45.00%• tail: 7,200 seconds• chip: 0.10%• tip: 250• chop: 13%• hole:
             30,000,000 Dai• dust: 7,500 Dai</td>
@@ -7872,7 +7872,7 @@
           </td>
           <td>Measures For Endgame Transition - Native Vault Engine - WSTETH-B</td>
           <td>Core</td>
-          <td>Current WSTETH-B parameters are:• Stability Fee: 8.50%• Liquidation Ratio: 175%• DC-IAM line:
+          <td>Current WSTETH-B parameters are:• Stability Fee: 6.75%• Liquidation Ratio: 175%• DC-IAM line:
             1,000,000,000 Dai• DC-IAM gap: 45,000,000 Dai• DC-IAM ttl: 43,200 seconds• cut: 99.00%• step: 90
             seconds• buf: 110.00%• cusp: 45.00%• tail: 7,200 seconds• chip: 0.10%• tip: 250• chop: 13%• hole:
             20,000,000 Dai• dust: 3,500 Dai</td>
@@ -7884,7 +7884,7 @@
           </td>
           <td>Measures For Endgame Transition - Native Vault Engine - WBTC-A</td>
           <td>Core</td>
-          <td>Current WBTC-A parameters are:• Stability Fee: 12.75%• Liquidation Ratio: 150%• DC-IAM line: 0 Dai•
+          <td>Current WBTC-A parameters are:• Stability Fee: 11.00%• Liquidation Ratio: 150%• DC-IAM line: 0 Dai•
             DC-IAM gap: 4,000,000 Dai• DC-IAM ttl: 86,400 seconds• cut: 99.00%• step: 90 seconds• buf: 110.00%•
             cusp: 45.00%• tail: 7,200 seconds• chip: 0.10%• tip: 250• chop: 0%• hole: 10,000,000 Dai• dust:
             7,500 Dai</td>
@@ -7896,7 +7896,7 @@
           </td>
           <td>Measures For Endgame Transition - Native Vault Engine - WBTC-B</td>
           <td>Core</td>
-          <td>Current WBTC-B parameters are:• Stability Fee: 13.25%• Liquidation Ratio: 150%• DC-IAM line: 0 Dai•
+          <td>Current WBTC-B parameters are:• Stability Fee: 11.50%• Liquidation Ratio: 150%• DC-IAM line: 0 Dai•
             DC-IAM gap: 2,000,000 Dai• DC-IAM ttl: 86,400 seconds• cut: 99.00%• step: 60 seconds• buf: 110.00%•
             cusp: 45.00%• tail: 4,800 sec• chip: 0.10%• tip: 250• chop: 0%• hole: 5,000,000 Dai• dust: 25,000
             Dai</td>
@@ -7908,7 +7908,7 @@
           </td>
           <td>Measures For Endgame Transition - Native Vault Engine - WBTC-C</td>
           <td>Core</td>
-          <td>Current WBTC-C parameters are:• Stability Fee: 12.50%• Liquidation Ratio: 175%• DC-IAM line: 0 Dai•
+          <td>Current WBTC-C parameters are:• Stability Fee: 10.75%• Liquidation Ratio: 175%• DC-IAM line: 0 Dai•
             DC-IAM gap: 8,000,000 Dai• DC-IAM ttl: 86,400 seconds• cut: 99.00%• step: 90 seconds• buf: 110.00%•
             cusp: 45.00%• tail: 7,200 seconds• chip: 0.10%• tip: 250• chop: 0%• hole: 10,000,000 Dai• dust:
             3,500 Dai</td>
@@ -8943,6 +8943,58 @@
         <tr>
           <td>
             <dfn>A.3.9
+              - Measures For Endgame Transition - SparkLend Risk Parameters - LBTC Risk Parameters</dfn>
+          </td>
+          <td>Measures For Endgame Transition - SparkLend Risk Parameters - LBTC Risk Parameters</td>
+          <td>Core</td>
+          <td>The current LBTC risk parameters are:• LTV: 65%• Liquidation Threshold: 70%• E-mode Category: 3•
+            Liquidation Bonus: 8%• Reserve Factor: 15%• Supply Cap: 250 LBTC• Borrow Cap: 0• Optimal 
+            Utilization: 45%• Isolated Debt Ceiling: N/A• Base Rate: 5%• Slope 1: 15%• Slope 2: 300%• 
+            Reserve State: Active• Collateral: Yes• Borrowing: No• Isolated Collateral: No•
+            Isolated Borrowing: No• Siloed Borrowing: No• Flash Loan Enabled: No</td>
+        </tr>
+        <tr>
+          <td>
+            <dfn>A.3.9
+              - Measures For Endgame Transition - SparkLend Risk Parameters - tBTC Risk Parameters</dfn>
+          </td>
+          <td>Measures For Endgame Transition - SparkLend Risk Parameters - tBTC Risk Parameters</td>
+          <td>Core</td>
+          <td>The current tBTC risk parameters are:• LTV: 65%• Liquidation Threshold: 70%• E-mode Category: 0•
+            Liquidation Bonus: 8%• Reserve Factor: 20%• Supply Cap: 125 tBTC• Borrow Cap: 25 tBTC• Optimal 
+            Utilization: 60%• Isolated Debt Ceiling: N/A• Base Rate: 0%• Slope 1: 4%•Slope 2: 300%• 
+            Reserve State: Active• Collateral: Yes• Borrowing: Yes• Isolated Collateral: No•
+            Isolated Borrowing: No• Siloed Borrowing: No• Flash Loan Enabled: Yes</td>
+        </tr>
+        <tr>
+          <td>
+            <dfn>A.3.9
+              - Measures For Endgame Transition - SparkLend Risk Parameters - ezETH Risk Parameters</dfn>
+          </td>
+          <td>Measures For Endgame Transition - SparkLend Risk Parameters - ezETH Risk Parameters</td>
+          <td>Core</td>
+          <td>The current ezETH risk parameters are:• LTV: 72%• Liquidation Threshold: 73%• E-mode Category: 0•
+            Liquidation Bonus: 10%• Reserve Factor: 15%• Supply Cap: 2,000 ezETH• Borrow Cap: 0• Optimal 
+            Utilization: 45%• Isolated Debt Ceiling: N/A• Base Rate: 5%• Slope 1: 15%•Slope 2: 300%• 
+            Reserve State: Active• Collateral: Yes• Borrowing: No• Isolated Collateral: No•
+            Isolated Borrowing: No• Siloed Borrowing: No• Flash Loan Enabled: No</td>
+        </tr>
+        <tr>
+          <td>
+            <dfn>A.3.9
+              - Measures For Endgame Transition - SparkLend Risk Parameters - rsETH Risk Parameters</dfn>
+          </td>
+          <td>Measures For Endgame Transition - SparkLend Risk Parameters - rsETH Risk Parameters</td>
+          <td>Core</td>
+          <td>The current rsETH risk parameters are:• LTV: 72%• Liquidation Threshold: 73%• E-mode Category: 0•
+            Liquidation Bonus: 10%• Reserve Factor: 15%• Supply Cap: 2,000 rsETH• Borrow Cap: 0• Optimal 
+            Utilization: 45%• Isolated Debt Ceiling: N/A• Base Rate: 5%• Slope 1: 15%•Slope 2: 300%• 
+            Reserve State: Active• Collateral: Yes• Borrowing: No• Isolated Collateral: No•
+            Isolated Borrowing: No• Siloed Borrowing: No• Flash Loan Enabled: No</td>
+        </tr>
+        <tr>
+          <td>
+            <dfn>A.3.9
               - Measures For Endgame Transition - SparkLend Risk Parameters - Total Flash Loan Fee Current Value</dfn>
           </td>
           <td>Measures For Endgame Transition - SparkLend Risk Parameters - Total Flash Loan Fee Current Value</td>
@@ -9171,6 +9223,50 @@
           <td>Measures For Endgame Transition - SparkLend Risk Parameters - Cap Automator weETH Parameters</td>
           <td>Core</td>
           <td>The current weETH cap automator parameters are:• Supply cap ◦ gap: 10,000 weETH ◦ ttl: 12 hours ◦ max: 500,000 weETH
+            • Borrow cap ◦ gap: N/A ◦ ttl: N/A ◦ max: N/A</td>
+        </tr>
+        <tr>
+          <td>
+            <dfn>A.3.9
+              - Measures For Endgame Transition - SparkLend Risk Parameters - Cap Automator LBTC
+              Parameters</dfn>
+          </td>
+          <td>Measures For Endgame Transition - SparkLend Risk Parameters - Cap Automator LBTC Parameters</td>
+          <td>Core</td>
+          <td>The current LBTC cap automator parameters are:• Supply cap ◦ gap: 250 LBTC ◦ ttl: 12 hours ◦ max: 2,500 LBTC
+            • Borrow cap ◦ gap: N/A ◦ ttl: N/A ◦ max: N/A</td>
+        </tr>
+        <tr>
+          <td>
+            <dfn>A.3.9
+              - Measures For Endgame Transition - SparkLend Risk Parameters - Cap Automator tBTC
+              Parameters</dfn>
+          </td>
+          <td>Measures For Endgame Transition - SparkLend Risk Parameters - Cap Automator tBTC Parameters</td>
+          <td>Core</td>
+          <td>The current tBTC cap automator parameters are:• Supply cap ◦ gap: 125 tBTC ◦ ttl: 12 hours ◦ max: 500 tBTC
+          • Borrow cap ◦ gap: 25 tBTC ◦ ttl: 12 hours ◦ max: 250 tBTC</td>
+        </tr>
+        <tr>
+          <td>
+            <dfn>A.3.9
+              - Measures For Endgame Transition - SparkLend Risk Parameters - Cap Automator ezETH
+              Parameters</dfn>
+          </td>
+          <td>Measures For Endgame Transition - SparkLend Risk Parameters - Cap Automator ezETH Parameters</td>
+          <td>Core</td>
+          <td>The current ezETH cap automator parameters are:• Supply cap ◦ gap: 2,000 ezETH ◦ ttl: 12 hours ◦ max: 20,000 ezETH
+            • Borrow cap ◦ gap: N/A ◦ ttl: N/A ◦ max: N/A</td>
+        </tr>
+        <tr>
+          <td>
+            <dfn>A.3.9
+              - Measures For Endgame Transition - SparkLend Risk Parameters - Cap Automator rsETH
+              Parameters</dfn>
+          </td>
+          <td>Measures For Endgame Transition - SparkLend Risk Parameters - Cap Automator rsETH Parameters</td>
+          <td>Core</td>
+          <td>The current rsETH cap automator parameters are:• Supply cap ◦ gap: 2,000 rsETH ◦ ttl: 12 hours ◦ max: 20,000 rsETH
             • Borrow cap ◦ gap: N/A ◦ ttl: N/A ◦ max: N/A</td>
         </tr>
         <tr>
