Update Sky Atlas for March 31 Edit

--- a/Sky Atlas/Sky Atlas.html
+++ b/Sky Atlas/Sky Atlas.html
@@ -7715,11 +7715,24 @@
           <td>Surplus Buffer And Smart Burn Engine - Surplus Buffer Splitter Parameters</td>
           <td>Section</td>
           <td>The current Surplus Buffer Splitter parameters are:• vow.hump: 70m (Threshold of Surplus buffer for Splitter to activate)•
-              Estimated Net protocol Income: 100,765,523• 50% of estimated net protocol income is sent to Splitter: 50,382,762 (for SBE and 
-              Seal Module, remaining 50% is accumulated in Surplus Buffer). This value must be regularly updated through an executive vote to 
-              continue to target 50% of the estimated net protocol income.• vow.bump: 10,000 DAI• splitter.hop: 1,728 seconds• 100% of 
-              Splitter allocation is set to accumulate SKY• 0% of Splitter allocation is set to reward Seal users• burn (the percentage of 
-              the vow.bump to be moved to the underlying flapper): 100% (1 * WAD). Flapper must maintain its legacy values.</td>
+              vow.bump: 10,000 USDS• splitter.hop: 1,728 seconds• 100% of Splitter allocation is set to accumulate SKY• 0% of Splitter 
+              allocation is set to reward Seal users• burn (the percentage of the vow.bump to be moved to the underlying flapper): 
+              100% (1 * WAD). Flapper must maintain its legacy values.</td>
+          </td>
+        </tr>
+        <tr>
+          <td>
+            <dfn>A.3.5
+              - A3 - Surplus Buffer And Smart Burn Engine - Surplus Buffer Splitter Parameters - Modification </dfn>
+          </td>
+          <td>Surplus Buffer And Smart Burn Engine - Surplus Buffer Splitter Parameters - Modification</td>
+          <td>Core</td>
+          <td>Until the Sky Treasury Management Function is fully developed, the Stability Facilitators, in consultation with the Stability 
+              Scope Advisors, may adjust the parameters of the Smart Burn Engine to control the rate at which it accumulates SKY.
+
+              The parameters of the Surplus Buffer Splitter can be modified pursuant to the Operational Weekly Cycle. The Stability Facilitators 
+              can propose changes to the `bump` and `hop` parameters directly via an Executive Vote without requiring a Governance Poll. Changes 
+              to other parameters require a Governance Poll followed by an Executive Vote.
           </td>
         </tr>
         <tr>
