--- a/Sky Atlas/Sky Atlas.html
+++ b/Sky Atlas/Sky Atlas.html
@@ -7717,7 +7717,7 @@
           <td>The current Surplus Buffer Splitter parameters are:• vow.hump: 70m (Threshold of Surplus buffer for Splitter to activate)•
               Estimated Net protocol Income: 100,765,523• 50% of estimated net protocol income is sent to Splitter: 50,382,762 (for SBE and 
               Seal Module, remaining 50% is accumulated in Surplus Buffer). This value must be regularly updated through an executive vote to 
-              continue to target 50% of the estimated net protocol income.• vow.bump: 10,000 DAI• splitter.hop: 1,728 seconds• 100% of 
+              continue to target 50% of the estimated net protocol income.• vow.bump: 10,000 DAI• splitter.hop: 1,235 seconds• 100% of 
               Splitter allocation is set to accumulate SKY• 0% of Splitter allocation is set to reward Seal users• burn (the percentage of 
               the vow.bump to be moved to the underlying flapper): 100% (1 * WAD). Flapper must maintain its legacy values.</td>
           </td>
@@ -8909,7 +8909,7 @@
           <td>Measures For Endgame Transition - SparkLend Risk Parameters - USDC Risk Parameters</td>
           <td>Core</td>
           <td>The current USDC risk parameters are:• LTV: 0%• Liquidation Threshold: 0%• E-mode Category: USD•
-            Liquidation Bonus: 0%• Reserve Factor: 5%• Supply Cap: 60,000,000 USDC• Borrow Cap: Set by cap
+            Liquidation Bonus: 0%• Reserve Factor: 5%• Supply Cap: Set by cap automator USDC• Borrow Cap: Set by cap
             automater• Optimal Utilization: 95%• Isolated Debt Ceiling: N/A• Base Rate: 0%• Slope 1: 6.83%•
             Slope 2: 15%• Reserve State: Active• Collateral: No• Borrowing: Yes• Isolated Collateral: No•
             Isolated Borrowing: No• Siloed Borrowing: No• Flash Loan Enabled: Yes</td>
@@ -8948,7 +8948,7 @@
           <td>Measures For Endgame Transition - SparkLend Risk Parameters - LBTC Risk Parameters</td>
           <td>Core</td>
           <td>The current LBTC risk parameters are:• LTV: 65%• Liquidation Threshold: 70%• E-mode Category: 3•
-            Liquidation Bonus: 8%• Reserve Factor: 15%• Supply Cap: 250 LBTC• Borrow Cap: 0• Optimal 
+            Liquidation Bonus: 8%• Reserve Factor: 15%• Supply Cap: Set by cap automator• Borrow Cap: 0• Optimal 
             Utilization: 45%• Isolated Debt Ceiling: N/A• Base Rate: 5%• Slope 1: 15%• Slope 2: 300%• 
             Reserve State: Active• Collateral: Yes• Borrowing: No• Isolated Collateral: No•
             Isolated Borrowing: No• Siloed Borrowing: No• Flash Loan Enabled: No</td>
@@ -8961,7 +8961,7 @@
           <td>Measures For Endgame Transition - SparkLend Risk Parameters - tBTC Risk Parameters</td>
           <td>Core</td>
           <td>The current tBTC risk parameters are:• LTV: 65%• Liquidation Threshold: 70%• E-mode Category: 0•
-            Liquidation Bonus: 8%• Reserve Factor: 20%• Supply Cap: 125 tBTC• Borrow Cap: 25 tBTC• Optimal 
+            Liquidation Bonus: 8%• Reserve Factor: 20%• Supply Cap: Set by cap automator• Borrow Cap: Set by cap automator• Optimal 
             Utilization: 60%• Isolated Debt Ceiling: N/A• Base Rate: 0%• Slope 1: 4%•Slope 2: 300%• 
             Reserve State: Active• Collateral: Yes• Borrowing: Yes• Isolated Collateral: No•
             Isolated Borrowing: No• Siloed Borrowing: No• Flash Loan Enabled: Yes</td>
@@ -8974,7 +8974,7 @@
           <td>Measures For Endgame Transition - SparkLend Risk Parameters - ezETH Risk Parameters</td>
           <td>Core</td>
           <td>The current ezETH risk parameters are:• LTV: 72%• Liquidation Threshold: 73%• E-mode Category: 0•
-            Liquidation Bonus: 10%• Reserve Factor: 15%• Supply Cap: 2,000 ezETH• Borrow Cap: 0• Optimal 
+            Liquidation Bonus: 10%• Reserve Factor: 15%• Supply Cap: Set by cap automator• Borrow Cap: 0• Optimal 
             Utilization: 45%• Isolated Debt Ceiling: N/A• Base Rate: 5%• Slope 1: 15%•Slope 2: 300%• 
             Reserve State: Active• Collateral: Yes• Borrowing: No• Isolated Collateral: No•
             Isolated Borrowing: No• Siloed Borrowing: No• Flash Loan Enabled: No</td>
@@ -8987,7 +8987,7 @@
           <td>Measures For Endgame Transition - SparkLend Risk Parameters - rsETH Risk Parameters</td>
           <td>Core</td>
           <td>The current rsETH risk parameters are:• LTV: 72%• Liquidation Threshold: 73%• E-mode Category: 0•
-            Liquidation Bonus: 10%• Reserve Factor: 15%• Supply Cap: 2,000 rsETH• Borrow Cap: 0• Optimal 
+            Liquidation Bonus: 10%• Reserve Factor: 15%• Supply Cap: Set by cap automater rsETH• Borrow Cap: 0• Optimal 
             Utilization: 45%• Isolated Debt Ceiling: N/A• Base Rate: 5%• Slope 1: 15%•Slope 2: 300%• 
             Reserve State: Active• Collateral: Yes• Borrowing: No• Isolated Collateral: No•
             Isolated Borrowing: No• Siloed Borrowing: No• Flash Loan Enabled: No</td>
@@ -9178,8 +9178,8 @@
           </td>
           <td>Measures For Endgame Transition - SparkLend Risk Parameters - Cap Automator USDC Parameters</td>
           <td>Core</td>
-          <td>The current USDC cap automator parameters are:• Supply cap ◦ gap: n/a ◦ ttl: n/a ◦ max: 60 million
-            USDC• Borrow cap ◦ gap: 6 million USDC ◦ ttl: 12 hours ◦ max: 57 million USDC</td>
+          <td>The current USDC cap automator parameters are:• Supply cap ◦ gap: 150 million USDC ◦ ttl: 12 hours ◦ max: 1 billion
+            USDC• Borrow cap ◦ gap: 50 million USDC ◦ ttl: 12 hours ◦ max: 950 million USDC</td>
         </tr>
         <tr>
           <td>
@@ -9266,7 +9266,7 @@
           </td>
           <td>Measures For Endgame Transition - SparkLend Risk Parameters - Cap Automator rsETH Parameters</td>
           <td>Core</td>
-          <td>The current rsETH cap automator parameters are:• Supply cap ◦ gap: 2,000 rsETH ◦ ttl: 12 hours ◦ max: 20,000 rsETH
+          <td>The current rsETH cap automator parameters are:• Supply cap ◦ gap: 5,000 rsETH ◦ ttl: 12 hours ◦ max: 40,000 rsETH
             • Borrow cap ◦ gap: N/A ◦ ttl: N/A ◦ max: N/A</td>
         </tr>
         <tr>
@@ -13396,7 +13396,7 @@
           <td>Real World Assets - Perpetual Yield Strategies - Current Exposure Of Morpho SUSDe Or USDe DDM Vault
           </td>
           <td>Active Data</td>
-          <td>Current target exposure of Morpho sUSDe or USDe vault is: 550,000,000 USDS</td>
+          <td>Current target exposure of Morpho sUSDe or USDe vault is: 375,000,000 USDS</td>
         </tr>
         <tr>
           <td>
