New AD - Excel (#80)

--- a/Sky Atlas/Sky Atlas.html
+++ b/Sky Atlas/Sky Atlas.html
@@ -13284,6 +13284,12 @@
               href="https://etherscan.io/address/0xd5515682c4Fec4835E36d81fe28264d80602D637">https://etherscan.io/address/0xd5515682c4Fec4835E36d81fe28264d80602D637</a>
             <a href="https://etherscan.io/verifySig/269031">https://etherscan.io/verifySig/269031</a> | <a
               href="https://forum.sky.money/t/aegisd-ad-recognition-submission/26145">https://forum.sky.money/t/aegisd-ad-recognition-submission/26145</a>
+            || Excel | <a
+              href="https://etherscan.io/address/0x0F04a22B62A26e25A29Cba5a595623038ef7AcE7">https://etherscan.io/address/0x0F04a22B62A26e25A29Cba5a595623038ef7AcE7</a>
+            <a href="https://etherscan.io/verifySig/269574">https://etherscan.io/verifySig/269574</a> | <a
+              href="https://etherscan.io/address/0x88252ed60c64925C3cFcb44ED15ba4b343ee1297">https://etherscan.io/address/0x88252ed60c64925C3cFcb44ED15ba4b343ee1297</a>
+            <a href="https://etherscan.io/verifySig/269573">https://etherscan.io/verifySig/269573</a> | <a
+              href="https://forum.sky.money/t/excel-ad-recognition-submission/26227">https://forum.sky.money/t/excel-ad-recognition-submission/26227</a>
             |
           </td>
         </tr>
