--- a/Sky Atlas/Sky Atlas.html
+++ b/Sky Atlas/Sky Atlas.html
@@ -8956,6 +8956,19 @@
         <tr>
           <td>
             <dfn>A.3.9
+              - Measures For Endgame Transition - SparkLend Risk Parameters - USDS Risk Parameters</dfn>
+          </td>
+          <td>Measures For Endgame Transition - SparkLend Risk Parameters - USDS Risk Parameters</td>
+          <td>Core</td>
+          <td>The current USDS risk parameters are:• LTV: 0%• Liquidation Threshold: 0%• E-mode Category: N/A•
+            Liquidation Bonus: 10%• Reserve Factor: 0%• Supply Cap: Unlimited• Borrow Cap: Unlimited•
+            Optimal Utilization: 95%• Isolated Debt Ceiling: N/A• Base Rate: SSR + 0.5%• Slope 1: 0%•
+            Slope 2: 20%• Reserve State: Active• Collateral: Yes• Borrowing: Yes• Isolated Collateral: No•
+            Isolated Borrowing: Yes• Siloed Borrowing: No• Flash Loan Enabled: No</td>
+        </tr>
+        <tr>
+          <td>
+            <dfn>A.3.9
               - Measures For Endgame Transition - SparkLend Risk Parameters - LBTC Risk Parameters</dfn>
           </td>
           <td>Measures For Endgame Transition - SparkLend Risk Parameters - LBTC Risk Parameters</td>
