add SBE Splitter parameter modification update (#93)
https://vote.makerdao.com/polling/QmTNzwgn#poll-detail

--- a/Sky Atlas/Sky Atlas.html
+++ b/Sky Atlas/Sky Atlas.html
@@ -13941,12 +13941,7 @@
           </td>
           <td>Surplus Buffer And Smart Burn Engine - Surplus Buffer Splitter Parameters - Modification</td>
           <td>Core</td>
-          <td>Until the Sky Treasury Management Function is fully developed, the Stability Facilitators, in consultation with the Stability 
-              Scope Advisors, may adjust the parameters of the Smart Burn Engine to control the rate at which it accumulates SKY.
-
-              The parameters of the Surplus Buffer Splitter can be modified pursuant to the Operational Weekly Cycle. The Stability Facilitators 
-              can propose changes to the bump and hop parameters directly via an Executive Vote without requiring a Governance Poll. Changes 
-              to other parameters require a Governance Poll followed by an Executive Vote.
+          <td>The parameters of the Surplus Buffer Splitter can be modified pursuant to the Operational Weekly Cycle. The Governance Facilitators, in consultation with the Stability Facilitators and the Stability Scope Advisors, can propose changes to the bump and hop parameters directly via an Executive Vote without requiring a Governance Poll. Changes to other parameters require a Governance Poll followed by an Executive Vote.
           </td>
         </tr>
         <tr>
