Weekly April 28 Edit

--- a/Sky Atlas/Sky Atlas.html
+++ b/Sky Atlas/Sky Atlas.html
@@ -3817,6 +3817,18 @@
         <tr>
           <td>
             <dfn>A.1.9
+              - Sky Core Governance Security - Emergency Spells - SPBEAMHaltSpell</dfn>
+          </td>
+          <td>Sky Core Governance Security - Emergency Spells - SPBEAMHaltSpell</td>
+          <td>Core</td>
+          <td>This Standby Spell can be used in an emergency to disable the Stability Parameter Bounded External Access Module (SP-BEAM). 
+              See A.3.9 - Measures For Endgame Transition - Stability Parameter Bounded External Access Module. After this Standby Spell 
+              is invoked, the SP-BEAM will no longer be able to set rates in the system. Invoking the Standby Spell has no impact on rates, 
+              which remain at pre-invocation levels until adjusted by Sky Governance via an Executive Vote.</td>
+        </tr>
+        <tr>
+          <td>
+            <dfn>A.1.9
               - Sky Core Governance Security - Emergency Spells - Standby Spell Process Definition</dfn>
           </td>
           <td>Sky Core Governance Security - Emergency Spells - Standby Spell Process Definition</td>
